// @vitest-environment happy-dom
import { act, cleanup, fireEvent, render, screen, within } from '@testing-library/react'
import { afterEach, describe, expect, it, vi } from 'vitest'

import { setTranslator } from '../../i18n/t'
import * as confirmStore from '../../state/confirm'
import * as lang from '../../state/lang'
import * as settingsDialog from '../../state/settings'
import { resetSources, setSources } from '../../state/sources'
import { domSnapshot } from '../../test/domSnapshot'
import { mountPageRoot } from '../../test/pageRoot'
import { CronApp } from './CronPage'
import * as store from './store'

import type { CronJob, CronSource } from './types'

/* The overflow menu's rows render from src/App.tsx into the shared #menu
   host, so the page's own root has to be standing for this island's menus to
   appear. */
mountPageRoot()

/* React refuses act() outside a test runner it recognizes unless told. */
;(globalThis as { IS_REACT_ACT_ENVIRONMENT?: boolean }).IS_REACT_ACT_ENVIRONMENT = true

function job(over: Partial<CronJob> = {}): CronJob {
  return {
    id: 'j1',
    name: 'morning digest',
    what: 'summarize the night',
    freq: 'day',
    at: '08:00',
    on: true,
    deliver: 'app',
    when: 'daily 08:00',
    next: 'tomorrow 08:00',
    runs: [],
    ...over,
  }
}

/* The island runs against the same two seams production wires up: a stand-in
   translator on setTranslator (it returns its key, so tests assert catalogue
   keys, not translations) and a fixture source on sources.cron. */
function install(rows: CronJob[], over: Partial<CronSource> = {}) {
  const calls: string[] = []
  const source: CronSource = {
    rows: async () => rows,
    toggle: async () => calls.push('toggle'),
    remove: async () => calls.push('remove'),
    save: async (d) => ({ ...job(), ...d }),
    runs: async () => [],
    runNow: async () => calls.push('runNow'),
    openRun: async () => calls.push('openRun'),
    ...over,
  }
  setTranslator((key, vars) => (vars ? `${key} ${JSON.stringify(vars)}` : key))
  vi.spyOn(confirmStore, 'ask').mockImplementation((_t, _b, _l, fn) => fn())
  setSources({ cron: source })
  document.body.innerHTML =
    '<div id="cronBody"></div>' +
    '<div class="veil" id="jobVeil" data-open="false"></div>' +
    '<div id="menu" data-open="false"></div>'
  return { source, calls }
}

/* The section as the dialog hosts it: the island in its own box, and the fetch
   arriving at the section costs (features/cron/store.ts's `enter`, which
   state/settings.ts spends -- here it is called by hand, because the dialog is
   not what this file is about). */
async function mount() {
  const view = render(<CronApp />, { container: document.getElementById('cronBody')! })
  await act(async () => {
    store.backToList()
    await store.refresh()
  })
  return view
}

/* Scoped to the list: the picked job carries the same name in its own header,
   so an unscoped query answers two elements once a row is open. */
const side = (): HTMLElement => document.querySelector('.two-pane-side') as HTMLElement
const rowText = (name: string): HTMLElement => within(side()).getByText(name)
const rowNamed = (name: string): HTMLElement =>
  [...document.querySelectorAll<HTMLElement>('.two-pane-row')]
    .find((r) => r.querySelector('.nm')!.textContent === name)!
const listNames = (): Array<string | null> =>
  [...side().querySelectorAll('.two-pane-row .nm')].map((b) => b.textContent)

/* The overflow menu of whichever host drew it, through the shared #menu the page
   keeps -- the same host production uses. */
async function pickMenu(open: HTMLElement, label: string): Promise<void> {
  await act(async () => {
    open.click()
  })
  const item = [...document.querySelectorAll<HTMLElement>('#menu button')].find((b) => b.textContent === label)
  expect(item, `menu item ${label}`).toBeTruthy()
  await act(async () => {
    item!.click()
  })
}

afterEach(() => {
  act(() => {
    store.backToList()
    store.closeSheet()
  })
  cleanup()
  vi.restoreAllMocks()
  resetSources()
  /* Applying a language is module state, so the one case that flips it must
     not leave the page in it. */
  lang._resetForTests()
})

describe('cron island', () => {
  it('shows every row the source answers, grouped by whether it is on', async () => {
    install([job(), job({ id: 'j2', name: 'weekly report', on: false })])
    await mount()
    expect(await screen.findByText('morning digest')).toBeTruthy()
    expect(screen.getByText('weekly report')).toBeTruthy()
    expect(screen.getByText('gui.cron.g_on')).toBeTruthy()
    expect(screen.getByText('gui.cron.g_off')).toBeTruthy()
  })

  it('shows the empty note when the source has nothing', async () => {
    install([])
    await mount()
    expect(await screen.findByText('gui.cron.none')).toBeTruthy()
  })

  /* Two groups and a search, which is what the three filter chips became: the
     question a reader arrives with is "did anything break", and a job whose
     last run failed says so on its own second line rather than behind a chip
     that could only ever say how many. */
  it('groups by whether the job is on, and says which one broke', async () => {
    install([
      job({ runs: [{ at: 'today', ok: false, note: 'boom' }] }),
      job({ id: 'b', name: 'weekly report', runs: [{ at: 'today', ok: true, note: 'fine' }] }),
      job({ id: 'c', name: 'paused one', on: false }),
    ])
    await mount()
    expect(await screen.findByText('morning digest')).toBeTruthy()
    expect(listNames()).toEqual(['morning digest', 'weekly report', 'paused one'])
    expect(rowNamed('morning digest').querySelector('.ds')!.className).toContain('bad')
    expect(rowNamed('weekly report').querySelector('.ds')!.className).not.toContain('bad')
    expect(rowNamed('paused one').className).toContain('two-pane-off')
  })

  it('narrows the list by what is typed in the search', async () => {
    install([job(), job({ id: 'b', name: 'weekly report' })])
    await mount()
    await screen.findByText('morning digest')
    const box = side().querySelector('input') as HTMLInputElement
    await act(async () => {
      fireEvent.change(box, { target: { value: 'weekly' } })
    })
    expect(listNames()).toEqual(['weekly report'])
  })

  it('opens the job beside the list, and says to pick one until it is', async () => {
    install([job()])
    await mount()
    expect(await screen.findByText('gui.cron.pick')).toBeTruthy()
    await act(async () => {
      rowText('morning digest').click()
    })
    expect(screen.queryByText('gui.cron.pick')).toBeNull()
    expect(screen.getByText('gui.cron.save')).toBeTruthy()
  })

  it('lands a refused save under the schedule control', async () => {
    install([job({ freq: 'once', at_local: '' })], {
      save: async () => {
        throw new Error('no instant')
      },
    })
    await mount()
    await act(async () => {
      rowText('morning digest').click()
    })
    await act(async () => {
      ;(await screen.findByText('gui.cron.save')).click()
    })
    expect(await screen.findByText('gui.job.need_instant')).toBeTruthy()
  })

  it('refuses a blank draft with a note under each empty field', async () => {
    install([])
    await mount()
    await act(async () => {
      screen.getByLabelText('gui.cron_new').click()
    })
    await act(async () => {
      ;(await screen.findByText('gui.save')).click()
    })
    expect(await screen.findByText('gui.job.need_name')).toBeTruthy()
    expect(screen.getByText('gui.job.need_what')).toBeTruthy()
  })

  /* The one link out of this form is inside it: "where results go" opens
     Channels, which is a section pick, which leaves this section. Dropping the
     draft there deleted a half-written job to a press that reads like a
     detour. */
  describe('a draft the reader leaves the section with', () => {
    const sheetUp = (): boolean => !!document.querySelector('#jobVeil .sheet')

    it('goes off screen and comes back with what was typed in it', async () => {
      install([])
      await mount()
      await act(async () => {
        screen.getByLabelText('gui.cron_new').click()
      })
      const name = document.querySelector<HTMLInputElement>('#jobVeil input[type="text"]')!
      await act(async () => {
        name.value = 'half written'
        name.dispatchEvent(new Event('input', { bubbles: true }))
      })

      /* What the link does: the dialog leaves this section. */
      await act(async () => { settingsDialog.leaveSection() })
      expect(sheetUp(), 'the sheet does not float over the section it left').toBe(false)
      expect(store.get().sheet, 'the draft is kept').toBeTruthy()
      expect(document.getElementById('jobVeil')!.dataset.open).toBe('false')

      /* And back. */
      await act(async () => { settingsDialog.enterSection('cron') })
      expect(sheetUp()).toBe(true)
      expect(document.querySelector<HTMLInputElement>('#jobVeil input[type="text"]')!.value)
        .toBe('half written')
    })

    /* Cancel is still cancel: what the reader ends deliberately does not come
       back the next time they open the section. */
    it('is gone for good once the reader cancels it', async () => {
      install([])
      await mount()
      await act(async () => {
        screen.getByLabelText('gui.cron_new').click()
      })
      await act(async () => {
        ;(await screen.findByText('gui.cancel')).click()
      })
      await act(async () => { settingsDialog.enterSection('cron') })
      expect(sheetUp()).toBe(false)
      expect(store.get().sheet).toBeNull()
    })
  })

  it('keeps the reader on the job page after a successful save', async () => {
    install([job()], {
      save: async (d) => ({ ...job(), ...d, name: d.name || 'morning digest' }),
    })
    await mount()
    await act(async () => {
      rowText('morning digest').click()
    })
    await act(async () => {
      ;(await screen.findByText('gui.cron.save')).click()
    })
    expect(screen.getByText('gui.cron.save')).toBeTruthy()
  })

  it('refetches the run history when the shell refreshes the page', async () => {
    const history = [{ at: 'today 08:00', ok: true, note: 'first' }]
    install([job()], { runs: async () => [...history] })
    await mount()
    await act(async () => {
      rowText('morning digest').click()
    })
    expect(await screen.findByText('first')).toBeTruthy()
    history.push({ at: 'today 09:00', ok: false, note: 'landed later' })
    await act(async () => {
      await store.refresh()
    })
    expect(await screen.findByText('landed later')).toBeTruthy()
  })

  it('refetches the run history on a language flip, and only then', async () => {
    const runs = vi.fn(async () => [{ at: 'today 08:00', ok: true, note: 'stamped' }])
    install([job()], { runs })
    await mount()
    await act(async () => {
      rowText('morning digest').click()
    })
    await screen.findByText('stamped')
    const before = runs.mock.calls.length
    /* A real pick, which is the only thing that moves the page's language. */
    await act(async () => {
      lang.set('zh')
    })
    expect(runs.mock.calls.length).toBe(before + 1)
    /* The island's own repaint must not refetch. */
    await act(async () => {
      store.redraw()
    })
    expect(runs.mock.calls.length).toBe(before + 1)
  })

  it('keeps the reader on the job page when a delete fails handled', async () => {
    install([job()], {
      remove: async () => {
        // What the live source throws after toasting the reason itself.
        throw { handled: true }
      },
    })
    await mount()
    await act(async () => {
      rowText('morning digest').click()
    })
    await pickMenu(
      document.querySelector('.two-pane-head button.mini.ghost') as HTMLElement, 'gui.cron.delete')
    expect(screen.getByText('gui.cron.save')).toBeTruthy()
  })

  /* Destructive verbs are not row verbs and not page-face verbs: the list row
     and the job page both keep them behind it. */
  it('keeps delete off both faces', async () => {
    install([job()])
    await mount()
    expect([...rowNamed('morning digest').querySelectorAll('button')].map((b) => b.textContent))
      .not.toContain('gui.cron.delete')
    await act(async () => {
      rowText('morning digest').click()
    })
    const face = [...document.querySelectorAll('.two-pane-main button')].map((b) => b.textContent)
    expect(face.length).toBeGreaterThan(0)
    expect(face).not.toContain('gui.cron.delete')
  })

  /* The hourly interval the backend has always accepted. The form sent the
     default every time, so "hourly" could only ever mean once an hour. */
  it('takes an interval for an hourly job', async () => {
    const saved: unknown[] = []
    install([job({ freq: 'hour', every_ms: 3600000 })], {
      save: async (d) => {
        saved.push({ every_ms: d.every_ms })
        return { ...job(), ...d }
      },
    })
    await mount()
    await act(async () => {
      rowText('morning digest').click()
    })
    const n = document.querySelector<HTMLInputElement>('.everyn input')!
    expect(n.value).toBe('1')
    await act(async () => {
      n.value = '6'
      n.dispatchEvent(new Event('input', { bubbles: true }))
    })
    await act(async () => {
      ;(await screen.findByText('gui.cron.save')).click()
    })
    expect(saved).toEqual([{ every_ms: 6 * 3600000 }])
  })

  /* Delivery is a global setting the save payload never carried, so the page
     states it and points at the setting rather than offering a choice that
     gets thrown away. */
  it('states delivery as a fact, with no per-job control', async () => {
    install([job()])
    await mount()
    await act(async () => {
      rowText('morning digest').click()
    })
    expect(screen.getByText('gui.job.deliver_global')).toBeTruthy()
    expect(document.querySelector('.two-pane-main select')).toBeNull()
  })

  it('asks the source to toggle and refreshes from it', async () => {
    const { source, calls } = install([job()])
    const rowsSpy = vi.spyOn(source, 'rows')
    await mount()
    const swi = (await screen.findAllByRole('switch'))[0]!
    await act(async () => {
      swi.click()
    })
    expect(calls).toContain('toggle')
    expect(rowsSpy.mock.calls.length).toBeGreaterThan(1)
  })

  it('keeps its rendered shape, list', async () => {
    install([
      job({ runs: [{ at: 'today', ok: false, note: 'boom' }] }),
      job({ id: 'b', name: 'weekly report', runs: [{ at: 'today', ok: true, note: 'fine' }] }),
      job({ id: 'c', name: 'paused one', on: false }),
    ])
    await mount()
    await screen.findByText('morning digest')
    expect(domSnapshot(document.getElementById('cronBody')!)).toMatchSnapshot()
  })

  it('keeps its rendered shape, job page', async () => {
    install([job({ runs: [{ at: 'today 08:00', ok: false, note: 'boom' }] })])
    await mount()
    await act(async () => {
      rowText('morning digest').click()
    })
    expect(domSnapshot(document.getElementById('cronBody')!)).toMatchSnapshot()
  })
})
