// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cron island > keeps its rendered shape, job page 1`] = `
"div.two-pane
  div.two-pane-side
    div.two-pane-find
      div.two-pane-search
        svg
          circle
          path
        input
      button.two-pane-add
        svg
          path
    div.two-pane-list
      div.two-pane-grp
      div.two-pane-row
        button.two-pane-hit
          span.two-pane-txt
            span.nm
            span.ds.bad
        button.two-pane-swi
  div.two-pane-main
    div.two-pane-head
      div.ttl
        div.nm
        div.two-pane-meta
          span
          span.st.ok
      button.two-pane-swi
      button.mini.ghost
    div.ff
      label
      input
    div.ff
      label
      textarea
    div.ff
      label
      div
        div.seg
          button
          button
          button
          button
          button
        input
    div.ff
      label
      div.sustate
        span
        span.x
        span.a
          button.mini.ghost
    div.sufoot
      span.n
      button.mini.key
    div.two-pane-sec
      div.two-pane-lab
        span.two-pane-sp
        button.mini
      div.cdruns
        div.empty-note"
`;

exports[`cron island > keeps its rendered shape, list 1`] = `
"div.two-pane
  div.two-pane-side
    div.two-pane-find
      div.two-pane-search
        svg
          circle
          path
        input
      button.two-pane-add
        svg
          path
    div.two-pane-list
      div.two-pane-grp
      div.two-pane-row
        button.two-pane-hit
          span.two-pane-txt
            span.nm
            span.ds.bad
        button.two-pane-swi
      div.two-pane-row
        button.two-pane-hit
          span.two-pane-txt
            span.nm
            span.ds
        button.two-pane-swi
      div.two-pane-grp
      div.two-pane-row.two-pane-off
        button.two-pane-hit
          span.two-pane-txt
            span.nm
            span.ds
        button.two-pane-swi
  div.two-pane-main
    div.two-pane-none"
`;
